--- a/public/nicepage.css
+++ b/public/nicepage.css
@@ -33929,14 +33929,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-table-alt-custom-color-1 tr:nth-child(even)
         {
             color: #ffffff;
-            background-color: #ff7700;
+            background-color: #ffa500;
         }
 
         .u-button-style.u-custom-color-1,
         .u-button-style.u-custom-color-1[class*="u-border-"]
         {
             color: #ffffff !important;
-            background-color: #ff7700 !important;
+            background-color: #ffa500 !important;
         }
 
         .u-button-style.u-custom-color-1:hover,
@@ -33951,7 +33951,7 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > .u-button-style.u-button-style.u-custom-color-1[class*="u-border-"]
         {
             color: #ffffff !important;
-            background-color: #e66b00 !important;
+            background-color: #ffcc00 !important;
         }
 
         .u-hover-custom-color-1:hover,
@@ -33976,11 +33976,11 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > a.u-button-style.u-button-style.u-active-custom-color-1[class*="u-border-"]
         {
             color: #ffffff !important;
-            background-color: #ff7700 !important;
+            background-color: #ffa500 !important;
         }
 
         a.u-link.u-hover-custom-color-1:hover {
-            color: #ff7700 !important;
+            color: #ffa500 !important;
         }
 
         
@@ -33992,14 +33992,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-table-alt-custom-color-2 tr:nth-child(even)
         {
             color: #ffffff;
-            background-color: #166ab4;
+            background-color: rgb(57, 67, 137);
         }
 
         .u-button-style.u-custom-color-2,
         .u-button-style.u-custom-color-2[class*="u-border-"]
         {
             color: #ffffff !important;
-            background-color: #166ab4 !important;
+            background-color: rgb(57, 67, 137) !important;
         }
 
         .u-button-style.u-custom-color-2:hover,
@@ -34014,7 +34014,7 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > .u-button-style.u-button-style.u-custom-color-2[class*="u-border-"]
         {
             color: #ffffff !important;
-            background-color: #145fa2 !important;
+            background-color: #ffa500 !important;
         }
 
         .u-hover-custom-color-2:hover,
@@ -34039,11 +34039,11 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > a.u-button-style.u-button-style.u-active-custom-color-2[class*="u-border-"]
         {
             color: #ffffff !important;
-            background-color: #166ab4 !important;
+            background-color: rgb(57, 67, 137) !important;
         }
 
         a.u-link.u-hover-custom-color-2:hover {
-            color: #166ab4 !important;
+            color: rgb(57, 67, 137) !important;
         }
 
         
@@ -34052,14 +34052,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-border-custom-color-1,
         .u-separator-custom-color-1:after
         {
-            border-color: #ff7700;
-            stroke: #ff7700;
+            border-color: #ffa500;
+            stroke: #ffa500;
         }
 
         .u-button-style.u-border-custom-color-1
         {
-            border-color: #ff7700 !important;
-            color: #ff7700 !important;
+            border-color: #ffa500 !important;
+            color: #ffa500 !important;
             background-color: transparent !important;
         }
 
@@ -34082,13 +34082,13 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.active > .u-border-active-custom-color-1,
         li.active > a.u-button-style.u-button-style.u-border-active-custom-color-1
         {
-            color: #ff7700 !important;
-            border-color: #ff7700 !important;
+            color: #ffa500 !important;
+            border-color: #ffa500 !important;
         }
 
         .u-link.u-border-custom-color-1[class*="u-border-"]
         {
-            border-color: #ff7700 !important;
+            border-color: #ffa500 !important;
         }
 
         .u-link.u-border-custom-color-1[class*="u-border-"]:hover
@@ -34100,14 +34100,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-border-custom-color-2,
         .u-separator-custom-color-2:after
         {
-            border-color: #166ab4;
-            stroke: #166ab4;
+            border-color: rgb(57, 67, 137);
+            stroke: rgb(57, 67, 137);
         }
 
         .u-button-style.u-border-custom-color-2
         {
-            border-color: #166ab4 !important;
-            color: #166ab4 !important;
+            border-color: rgb(57, 67, 137) !important;
+            color: rgb(57, 67, 137) !important;
             background-color: transparent !important;
         }
 
@@ -34130,13 +34130,13 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.active > .u-border-active-custom-color-2,
         li.active > a.u-button-style.u-button-style.u-border-active-custom-color-2
         {
-            color: #166ab4 !important;
-            border-color: #166ab4 !important;
+            color: rgb(57, 67, 137) !important;
+            border-color: rgb(57, 67, 137) !important;
         }
 
         .u-link.u-border-custom-color-2[class*="u-border-"]
         {
-            border-color: #166ab4 !important;
+            border-color: rgb(57, 67, 137) !important;
         }
 
         .u-link.u-border-custom-color-2[class*="u-border-"]:hover
@@ -34150,7 +34150,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-text-custom-color-1,
         a.u-button-style.u-text-custom-color-1[class*="u-border-"]
         {
-            color: #ff7700 !important;
+            color: #ffa500 !important;
         }
 
         a.u-button-style.u-text-custom-color-1:hover,
@@ -34182,7 +34182,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-popupmenu-items.u-text-hover-custom-color-1 .u-nav-link:hover,
         .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-1 .u-nav-link.active
         {
-            color: #ff7700 !important;
+            color: #ffa500 !important;
         }
 
         .u-text-custom-color-1 svg,
@@ -34191,7 +34191,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-button-style.active > .u-text-active-custom-color-1 svg,
         .u-text-hover-custom-color-1:focus svg
         {
-            fill: #ff7700;
+            fill: #ffa500;
         }
 
         .u-link.u-text-custom-color-1:hover
@@ -34201,7 +34201,7 @@ a.u-link.u-text-hover-grey-90:hover {
 
         a.u-link.u-text-hover-custom-color-1:hover
         {
-            color: #ff7700 !important;
+            color: #ffa500 !important;
         }
         
         
@@ -34209,7 +34209,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-text-custom-color-2,
         a.u-button-style.u-text-custom-color-2[class*="u-border-"]
         {
-            color: #166ab4 !important;
+            color: rgb(57, 67, 137) !important;
         }
 
         a.u-button-style.u-text-custom-color-2:hover,
@@ -34241,7 +34241,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-popupmenu-items.u-text-hover-custom-color-2 .u-nav-link:hover,
         .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-2 .u-nav-link.active
         {
-            color: #166ab4 !important;
+            color: rgb(57, 67, 137) !important;
         }
 
         .u-text-custom-color-2 svg,
@@ -34250,7 +34250,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-button-style.active > .u-text-active-custom-color-2 svg,
         .u-text-hover-custom-color-2:focus svg
         {
-            fill: #166ab4;
+            fill: rgb(57, 67, 137);
         }
 
         .u-link.u-text-custom-color-2:hover
@@ -34260,7 +34260,7 @@ a.u-link.u-text-hover-grey-90:hover {
 
         a.u-link.u-text-hover-custom-color-2:hover
         {
-            color: #166ab4 !important;
+            color: rgb(57, 67, 137) !important;
         }
 
         
